force-app/main/default/objects/SPEN_IntegrationRequest__c/SPEN_IntegrationRequest__c.object-meta.xml
<CustomObject>
    <description>Integration Request object has been set up to use for IVR Integration.</description>
    <label>Integration Request</label>
    <nameField>
        <label>Integration Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>