force-app/main/default/objects/SPEN_IntegrationRequest__c/fields/SPEN_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>