force-app/main/default/objects/SPEN_IntegrationRequest__c/fields/SPEN_IntegrationRequestServiceClass__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IntegrationRequestServiceClass__c</fullName>
    <label>Integration Request Service Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>