force-app/main/default/objects/SPEN_IntegrationRequest__c/fields/SPEN_MessageType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MessageType__c</fullName>
    <label>Message Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Zone</fullName>
            </value>
            <value>
                <fullName>District</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>