force-app/main/default/objects/SPEN_IntegrationRequest__c/fields/SPEN_Records__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Records__c</fullName>
    <label>Records</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>