force-app/main/default/objects/SPEN_IntegrationRequest__c/fields/SPEN_RelatedRecord__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedRecord__c</fullName>
    <description>Should be updated with zone id when we are updating the message details in integration request record</description>
    <label>Related Record</label>
    <length>20</length>
    <type>Text</type>
</CustomField>