force-app/main/default/objects/SPEN_IntegrationRequest__c/fields/SPEN_RelatedVoiceCall__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedVoiceCall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRMD-8331</description>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Integration Requests</relationshipLabel>
    <relationshipName>Integration_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>