force-app/main/default/objects/SPEN_IntegrationRequest__c/fields/SPEN_Request__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Request__c</fullName>
    <description>CRMD-724 For tracking the incoming JSON request</description>
    <label>Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>