force-app/main/default/objects/SPEN_IntegrationRequest__c/fields/SPEN_RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RequestedBy__c</fullName>
    <label>Requested By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>