force-app/main/default/objects/SPEN_IntegrationRequest__c/fields/SPEN_Response__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Response__c</fullName>
    <label>Response</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>