force-app/main/default/objects/SPEN_IntegrationRequest__c/fields/SPEN_Result__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Result__c</fullName>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>