force-app/main/default/objects/SPEN_IntegrationRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SPEN_IntegrationRequestServiceClass__c</columns>
    <columns>SPEN_Response__c</columns>
    <columns>SPEN_Result__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>SPEN_Records__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>