force-app/main/default/objects/SPEN_IntegrationRequest__c/listViews/SPEN_SearchEcoesService.listView-meta.xml
<ListView>
    <fullName>SPEN_SearchEcoesService</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SPEN_IntegrationRequestServiceClass__c</columns>
    <columns>SPEN_Result__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>SPEN_Records__c</columns>
    <columns>SPEN_Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_IntegrationRequestServiceClass__c</field>
        <operation>equals</operation>
        <value>SPEN_SearchEcoesService</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>SPEN_SearchEcoesService</label>
</ListView>